--- a/website/app/styles/app.css
+++ b/website/app/styles/app.css
@@ -751,10 +751,6 @@ video {
   height: 150px;
 }
 
-.h-\[50vh\] {
-  height: 50vh;
-}
-
 .min-h-screen {
   min-height: 100vh;
 }
@@ -847,10 +843,6 @@ video {
 
 .max-w-\[600px\] {
   max-width: 600px;
-}
-
-.max-w-\[16ch\] {
-  max-width: 16ch;
 }
 
 .max-w-\[20ch\] {
@@ -1167,14 +1159,14 @@ video {
   border-color: rgb(115 248 186 / var(--tw-border-opacity));
 }
 
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
 .border-blue-500 {
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .border-transparent {
@@ -1234,6 +1226,11 @@ video {
   background-color: transparent;
 }
 
+.bg-yellow-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+}
+
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
@@ -1287,11 +1284,6 @@ video {
 .bg-blue-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
 }
 
 .bg-red-200 {
@@ -1413,11 +1405,6 @@ video {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
 }
 
 .px-2 {
@@ -1551,10 +1538,6 @@ video {
 
 .leading-none {
   line-height: 1;
-}
-
-.leading-6 {
-  line-height: 1.5rem;
 }
 
 .tracking-wider {
@@ -1925,6 +1908,10 @@ video {
     margin-right: auto;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .md\:ml-16 {
     margin-left: 4rem;
   }
@@ -1933,12 +1920,12 @@ video {
     height: 851px;
   }
 
-  .md\:h-\[650px\] {
-    height: 650px;
-  }
-
   .md\:h-\[50vh\] {
     height: 50vh;
+  }
+
+  .md\:h-\[650px\] {
+    height: 650px;
   }
 
   .md\:min-h-\[1400px\] {
